<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="login_with_facebook">Masuk dengan Facebook</string>
    <string name="or">Atau</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="login">Masuk</string>
    <string name="login_with_finger_print">Masuk dengan Fingerprint</string>
    <string name="have_no_account">Belum punya akun? <font color="#00AB6B">Daftar sekarang</font></string>
    <string name="customer_care">Costumer Care</string>
</resources>