<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dp_16"
    android:paddingTop="@dimen/dp_32"
    android:paddingRight="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_16">

    <TextView
        android:id="@+id/tvLoginWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounding_button"
        android:gravity="center"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        android:text="@string/login_with_google"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_14"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:paddingStart="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="@id/tvLoginWithGoogle"
        app:layout_constraintLeft_toLeftOf="@id/tvLoginWithGoogle"
        app:layout_constraintTop_toTopOf="@id/tvLoginWithGoogle"
        app:srcCompat="@drawable/ic_google" />

    <TextView
        android:id="@+id/tvLoginWithFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/bg_rounding_button"
        android:gravity="center"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        android:text="@string/login_with_facebook"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_14"
        app:layout_constraintTop_toBottomOf="@id/tvLoginWithGoogle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:adjustViewBounds="true"
        android:paddingStart="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="@id/tvLoginWithFacebook"
        app:layout_constraintLeft_toLeftOf="@id/tvLoginWithFacebook"
        app:layout_constraintTop_toTopOf="@id/tvLoginWithFacebook"
        app:srcCompat="@drawable/ic_facebook" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_16"
        android:paddingTop="@dimen/dp_24"
        android:paddingEnd="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_24"
        android:text="@string/or"
        android:textSize="@dimen/text_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginWithFacebook" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/border_button_color"
        app:layout_constraintBottom_toBottomOf="@id/tvOr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvOr"
        app:layout_constraintTop_toTopOf="@id/tvOr" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/border_button_color"
        app:layout_constraintBottom_toBottomOf="@id/tvOr"
        app:layout_constraintLeft_toRightOf="@id/tvOr"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvOr" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/tvOr">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_or_email"
            android:inputType="text"
            android:textSize="@dimen/text_14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintTop_toBottomOf="@id/tilUsername"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_14" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_16"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_12"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/bg_rounding_green_button"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_14"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvLoginWithFingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_border_green_button"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        android:text="@string/login_with_finger_print"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_14"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvLogin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:gravity="center"
        android:text="@string/have_no_account"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_12"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvLoginWithFingerprint" />
</androidx.constraintlayout.widget.ConstraintLayout>